--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="crazyEight">
   <head>
-    <title>Crazy Eight</title>
+    <title>Crazy --Eight</title>
     <link rel="stylesheet" href="/css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
